<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoros2_client_interface_dependencies</name>
  <version>0.1.0</version>
  <description>Message, service and action dependencies for clients of MotoROS2</description>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="ted.miller@motoman.com">Ted Miller (Yaskawa Motoman)</maintainer>

  <license>Apache-2.0</license>

  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <!-- from source -->
  <exec_depend>industrial_msgs</exec_depend>
  <exec_depend>motoros2_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
